updated at: 2023-04-25 20:11, 【YK&#39;s Atelier】ハロウィンマントセット - YK&#39;s Atelier - BOOTH

--- a/VRChat/65/1012365.html
+++ b/VRChat/65/1012365.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Jj5hR5HGqaei7+trv68oCVcCBWTkjkTp8man8A2sxTk="></script>
+    "Ou0BroA2drUl2uLQ2FbHgzKvHoUJ0/LhLbVMEMnAFlU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ハロウィンマントセット","description":"ハロウィンに向けての小物販売です！\n【ヴァンパイアマントv1】はノーマルタイプのマント、【v2】は足が広がった感じに仕上がっています！\nさらに【コウモリのはね】は小さくして頭につけたり、背中につけたりするだけでハロウィン気分が味わえます！\n\n収益化された動画への出演、映り込みなどOKです。\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\nレイヤーが分けられているので、色変更はやりやすいと思いま\nす。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物\n　ヴァンパイアマントv1.fbx\n　ヴァンパイアマントv1.Unity package\n　ヴァンパイアマントv2.fbx\n　ヴァンパイアマントv2.Unity package\n　コウモリのはね.fbx\n　コウモリのはね.Unity package\n　ヴァンパイアマント.psd\n　コウモリのはね.psd\n\nunity package内のシェーダーはCubedsShaders-v0.25を使用しております。\n\nモデルポリゴン数：ヴァンパイアマントv1,v2 　292ポリゴン\n　　　　　　　　　コウモリのはね　　　　　　552ポリゴン\n\nマテリアル：各1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/1012365","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/1012365/aa32c058-6564-4cf2-b395-9a18e3e1f582_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Jj5hR5HGqaei7+trv68oCVcCBWTkjkTp8man8A2sxTk="></script>
+    nonce="Ou0BroA2drUl2uLQ2FbHgzKvHoUJ0/LhLbVMEMnAFlU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1012365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               170
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1012365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               170
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
