--- a/VRChat/40/989840.html
+++ b/VRChat/40/989840.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vBsBujly9XVYPZgP0gI9MjUFeT7QEPi7YBcd5bJ0/tQ="></script>
+    "L5GlgFj/JBACNjF7z1Q8oC4w2QDw2BkFN8C6YRhJzdI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Stengun MkⅡ(fbxファイル) △3980","description":"この商品はステンガンMkⅡをモデリングしたものです。\nポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。\n\nまた、VRChatでの使用を想定してある為、大きさをかなり小さめに設定してあります。\n\n2021/12 追記\n商品画像の変更、ボーン、スキニング済みのバージョン追加\n\n△3980ポリゴン、テクスチャ同梱。\n\n●内容物\n\n・fbxファイル『Suten_MK2.fbx』\n・テクスチャ一枚(Albedo用)『Suten_MK2_Skin.png』\n\nまたこれらのデータはzip形式で圧縮してあります。\n\n＜利用規約＞\n本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。\n\n非改変での再配布、再販売、自作発言等は禁止です。\nテクスチャ改変、モデル改変や商業への使用は大丈夫です。\n\n・バージョン情報\n2018/9/13 ver1.0 配布開始\n2018/12/9 商品名を修正\n2021/12/25 商品画像変更、ボーン、スキニング済みバージョン追加","url":"https://booth.pm/ja/items/989840","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/989840/060b3f0c-ccdc-41cf-86d5-f52c6353bf19_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vBsBujly9XVYPZgP0gI9MjUFeT7QEPi7YBcd5bJ0/tQ="></script>
+    nonce="L5GlgFj/JBACNjF7z1Q8oC4w2QDw2BkFN8C6YRhJzdI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/989840/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               148
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/989840/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               148
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
