--- a/VRChat/23/1011023.html
+++ b/VRChat/23/1011023.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ufPEnw6kZUoex+eYoi1tZm/a5s0TPhS+5QY0EGLyufw="></script>
+    "fYKc+1UFiYh/zXo3ofVDP9aILKA+EENGMFIAggnQJ8k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"禁忌事務ノ魔導書 / Grimoire Kinkijim【3Dモデル】","description":"⚠Unitypackageインポート前に⚠\n事前に以下のAssetsをプロジェクト内にインポートしておいてください。\n・ユニティちゃんトゥーンシェーダー2.0 / UTS2\n\n\n【魔法陣シェーダーについて】\nGithubでも公開中です。同梱物より最新になる可能性があります。\nhttps://github.com/NamaeWatashino/MagicCircleShader\n\n - - -\n\n⚠Required asset⚠\nYou need these assets.\n・Unity-chan Toon Shader 2.0\n\n【About Magic Circle Shader】\nIt is also available on Github. It may be more recent than the package.\nhttps://github.com/NamaeWatashino/MagicCircleShader\n","url":"https://booth.pm/ja/items/1011023","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1011023/04a21ce5-9763-4efb-b449-4b8aba9a2976_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ufPEnw6kZUoex+eYoi1tZm/a5s0TPhS+5QY0EGLyufw="></script>
+    nonce="fYKc+1UFiYh/zXo3ofVDP9aILKA+EENGMFIAggnQJ8k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,10 +165,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1011023/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              252
+                              253
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1011023/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              252
+                              253
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
