--- a/VRChat/03/1010903.html
+++ b/VRChat/03/1010903.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r6LaOpA5kcekyTFQzfJN64bpZ2dpfXlZPIt4H/2ct+M="></script>
+    "aGjQ4J5gpK5kidDEmdywnvIxVGF7OIVtAQhoJ5Rfzio="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"刎喰ーシャンイル：ボクセル鎌","description":"【品名：刎喰ーシャンイル（ボクセル鎌）】\n△３０２８ポリゴン\n\n特別なギミックはございません。持って、振ってください。\n\n【内容】\n・fbxファイル\n・texファイル\n・voxファイル\n・UnityPackageファイル\n・Read me\n\n\nTwitter→ https://twitter.com/shiren_193?lang=ja","url":"https://booth.pm/ja/items/1010903","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ea13c107-27c9-49a4-82b1-71cbe4afa06a/i/1010903/a4189f88-690c-4311-8ed3-dcefd4fa6d25_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r6LaOpA5kcekyTFQzfJN64bpZ2dpfXlZPIt4H/2ct+M="></script>
+    nonce="aGjQ4J5gpK5kidDEmdywnvIxVGF7OIVtAQhoJ5Rfzio="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1010903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1010903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
