--- a/VRChat/61/1010861.html
+++ b/VRChat/61/1010861.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LIRwZFJUWiCRBxUPDiRegjWnUiwnXkKkWDSbSY1y/vI="></script>
+    "c81n0nvm18VjCfD+edTJc4UnwnNiu93a51S6T84DE7Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCJD部のバッジ","description":"VRCJD部のバッジ。オリジナルのバッジのベースにも使えます。\n\n120ポリゴン。Unitypackage形式。テクスチャのpsdファイル同梱。\n\n改変・再配布自由。他人の迷惑になることには使わないでね。","url":"https://booth.pm/ja/items/1010861","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e21d0fb1-a91d-4e44-8c8b-39f92a18972d/i/1010861/14244381-e6d8-4749-bba8-f274844f574f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LIRwZFJUWiCRBxUPDiRegjWnUiwnXkKkWDSbSY1y/vI="></script>
+    nonce="c81n0nvm18VjCfD+edTJc4UnwnNiu93a51S6T84DE7Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1010861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1010861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
