updated at: 2023-04-25 20:12, レイマーチング腕輪シェーダー - いすずのショップ - BOOTH

--- a/VRChat/97/1010497.html
+++ b/VRChat/97/1010497.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "F+EJjg2RpS95peuGq9TbVwbOP6dFjddptOVmniJ6QYs="></script>
+    "l3aigDcdIiCt8A303VdSXHTH+f7Lq7O4VMScYE5sTm8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"レイマーチング腕輪シェーダー","description":"Raymarching Ring\n\nシェーダーで生成されたリング状のアクセサリ。\n\n同梱のモデルのポリゴン数：12 ポリゴン\n\nただし、シェーダーによって描画されているため輪っか自体にポリゴンというのはありません。\nどこまでも滑らかです。","url":"https://booth.pm/ja/items/1010497","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/803278ff-2d01-41f3-90ce-1a499c6b6557/i/1010497/138c66e5-174a-4069-8920-ac65115e3031_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F+EJjg2RpS95peuGq9TbVwbOP6dFjddptOVmniJ6QYs="></script>
+    nonce="l3aigDcdIiCt8A303VdSXHTH+f7Lq7O4VMScYE5sTm8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1010497/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               250
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1010497/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               250
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
