--- a/VRChat/24/1010024.html
+++ b/VRChat/24/1010024.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tqItsoP4QON4kD/CXRRIyOCZVR2rPjhR7RtVwJdyyJ4="></script>
+    "mZeHf4BPxUL2kyAxVLmS1jVEsR28hc5mGXGEZPgitL4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】探検用ヘルメット","description":"ダンジョン探索時など、落下物から頭を守ってくれるヘルメットです。付属のライトで暗い場所の探索など重宝します。\n（Unityでスポットライトを組み込むことでヘッドライトとして使用できます。）\n\n主にVRChat内での利用を想定して制作しています。\n\n\n頂点：318　面：318　三角面：602　\n\n改善点やご要望、不具合等ありましたら、TwitterでリプライやDMいただけますと幸いです。\n\n★内容物\nunitypackage\nReadme.txt（利用規約）\n\n★更新履歴\n2018/09/12　Ver0.1.1\nヘルメット作成\n\n2022/06/28　Ver0.1.2\nヘルメットからSpotLightを削除\n\n\n","url":"https://booth.pm/ja/items/1010024","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3b939523-d29b-4dd1-ba51-cfba5642af23/i/1010024/efbcef39-a747-4459-ac2e-a28774a1f773_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tqItsoP4QON4kD/CXRRIyOCZVR2rPjhR7RtVwJdyyJ4="></script>
+    nonce="mZeHf4BPxUL2kyAxVLmS1jVEsR28hc5mGXGEZPgitL4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1010024/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1010024/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
