updated at: 2023-04-25 20:14, 「本日の主役」タスキ(VRChat想定) - おきつねふぁくとりー - BOOTH

--- a/VRChat/09/1009509.html
+++ b/VRChat/09/1009509.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zCWvp0B9ly5nPfPikyu0Taf3zVS52tKlKn/l62+jLbw="></script>
+    "lfEEm499+OO3x8aWd92cYUnDbyNbtGjt6aHqJ+6N4E8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「本日の主役」タスキ(VRChat想定)","description":"よくある「本日の主役」のタスキです。\nジョークグッズなので、軽い気持ちでご利用ください。\nまた、UVマップを同梱しているのでお好きなタスキを作ることができます。\n\n2021/5/5\n・ボーンを入れました。\n・シェイプキーで胸・おなか・おしり・スカートの部分を膨らませることができるようになりました。\nこれにより、ある程度の貫通を防止できるようになりました。また、アバターにも着せやすくなりました。\n\n・Arktoonシェーダーを同梱しました。\n・規約にVN3ライセンス（ https://www.vn3.org/ ）のテンプレートを使用しました。それに伴い、利用規約が変更となりました。\nダウンロード済の方もご確認ください。","url":"https://booth.pm/ja/items/1009509","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1009509/e540ecb5-7b17-4409-9774-f649dab926ef_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zCWvp0B9ly5nPfPikyu0Taf3zVS52tKlKn/l62+jLbw="></script>
+    nonce="lfEEm499+OO3x8aWd92cYUnDbyNbtGjt6aHqJ+6N4E8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1009509/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1009509/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
