updated at: 2023-04-25 20:15, VRChat向け　アクセサリー　手鏡 - KOMONOBEYA - BOOTH

--- a/VRChat/12/1008312.html
+++ b/VRChat/12/1008312.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gFChVUaaaCDT6foAYvnW68Qww8Oxpdt37iKU0OISiH0="></script>
+    "N50nJjlmsYXPuCdmHlq3hpByWB/xKE8u4RKTYGkDI/Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　アクセサリー　手鏡","description":"VRChat向けアクセサリー　手鏡になります。\n\n■ポリゴン数：468\n\n【内容】\n\n■HandMirror.UnityPackage\n■readme.txt\n■チュートリアル画像\n\n導入、使用方法はreadmeとチュートリアルを画像で用意しておりますのでそちらを必ず読んで導入してください。\n\nテクスチャ-ではなくマテリアルを設定していますので好きなカラーに変えてお使いください。\n\n制作者:をたぱち\nhttps://twitter.com/_4kikn ご不明な点などございましたら気軽に連絡いただけますと幸いです。","url":"https://booth.pm/ja/items/1008312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/1008312/ecb657c1-c8b3-42d0-8a86-3d561be0d030_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gFChVUaaaCDT6foAYvnW68Qww8Oxpdt37iKU0OISiH0="></script>
+    nonce="N50nJjlmsYXPuCdmHlq3hpByWB/xKE8u4RKTYGkDI/Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1008312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1008312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
