updated at: 2023-04-25 20:15, つるはし - まじまじの間 - BOOTH

--- a/VRChat/40/1008240.html
+++ b/VRChat/40/1008240.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U+zCnvNBYQxa1Xf/r+qMocezOW+kPw4tVTfkfl0mwgM="></script>
+    "tNnl9Gb7vLnxbUihGOYOwGAJ207L04e+ygmcNk76/A8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"つるはし","description":"pick\n・Unitypackage\n・テクスチャファイル(1枚)\n・FBXファイル(本体)\n・Blenderファイル\n・readme\n\nポリゴン数：160","url":"https://booth.pm/ja/items/1008240","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/49fd9aa9-40f7-4021-91dd-0b60603082ac/i/1008240/854c685b-5020-4368-aa23-8548b73bf096_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U+zCnvNBYQxa1Xf/r+qMocezOW+kPw4tVTfkfl0mwgM="></script>
+    nonce="tNnl9Gb7vLnxbUihGOYOwGAJ207L04e+ygmcNk76/A8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1008240/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1008240/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
