updated at: 2023-04-25 20:17, Kite Shield（歩兵用中型盾） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/78/1006978.html
+++ b/VRChat/78/1006978.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nNTvdUth9cN04LV81i8xaTe7C1b+R39ZO/2v6OAcqbw="></script>
+    "f9t8g9A6DjMM59YddV9e0pz4wYfr7Mg5qCULhhuajmk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Kite Shield（歩兵用中型盾）","description":"中型盾として特に有名なカイトシールドを当工房でも制作しました。\nSketchfabで3Dモデルの閲覧ができます。\n\nポリゴン数 △1480\nテクスチャ数 2048*2048 3枚\n\nオリジナルの盾紋様を導入しやすいよう、デフォルトの紋様を適用していないテクスチャファイルも用意しています。是非自分の、グループのシンボルマークなどで盾を飾ってみてください。\n\n2枚目の使用例画像\n・剣：当工房製 Heavy Sword（重量片手剣）\nhttps://garden-of-ashen.booth.pm/items/946253\n\n・モデル：KUKURi様 桜川虎子\nhttps://booth.pm/ja/items/987801","url":"https://booth.pm/ja/items/1006978","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1006978/06193b82-18cd-443a-a64f-89872d04132c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nNTvdUth9cN04LV81i8xaTe7C1b+R39ZO/2v6OAcqbw="></script>
+    nonce="f9t8g9A6DjMM59YddV9e0pz4wYfr7Mg5qCULhhuajmk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006978/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006978/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
