updated at: 2023-04-25 20:18, Moch-Re Mech Kit用追加テクスチャパック【本体別売】 - Virtual Vapeshop VORPAL - BOOTH

--- a/VRChat/95/1006195.html
+++ b/VRChat/95/1006195.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iqWHJQT+QxpbQC+gN6+sZV53tWTflwXDQueyq1sPyew="></script>
+    "txEcrtOhE7i3g7HFViYYBMhNCPSfg3YyMIfYD6uSP8A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Moch-Re Mech Kit用追加テクスチャパック【本体別売】","description":"本商品はMoch-Re Mech Kit（https://vvvorpal.booth.pm/items/1000786）用のテクスチャパックです。\n\nZip解凍後、Unity上で各フォルダ内のテクスチャをMoch-Re Mech Kitのマテリアルに適用させてください。\nボディ、ドリップチップ共にStandardシェーダー、Opaqueレンダリングで適用します。そのため本体のマテリアルを１つにまとめることができます。\nパステルカラーなバーチャルVapeライフをお楽しみください。\n\n☆注意！\n\n本商品にはMoch-Re Mech Kit本体は含まれておりません。テクスチャを活用するためには本体を別途お買い上げいただく必要があります。\n\nMoch-Re Mech Kit\nhttps://vvvorpal.booth.pm/items/1000786\n\n\n☆利用規約\n\n◇Moch-Re Mech Kit用追加テクスチャパック（以下本モデル）の利用者は本モデルの利用をもってこの規約を読了し同意したものとみなします。\n\n◇本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n◇著作権について\n\n・改変の有無を問わず本モデルの著作権は本モデルの制作者であるRyoRIに帰属します。\n\n◇改変・用途について\n\n・本モデルは主としてVRChatにおける使用を想定しています。\n・本モデルは規約の範囲内で自由に改変できます。\n・本モデルを取り出せない形で組み込んだ作品による商用利用ができます。RyoRIのクレジットを明記してください。使用の報告は任意ですが、教えていただけると喜びます。\n・本モデルでのR18、R18G用途での利用ができます。\n・動画への映り込みは問題ありません。\n\n◇禁止事項\n\n・改変の有無を問わず本モデルを再配付・販売することを禁止します。\n・本モデルの全部または一部を第三者に提供することを禁止します。\n・本モデルの全部または一部を、不特定多数が入手できるような形で公開することを禁止します。\n・本モデルの制作者および配布者を騙ることを禁止します。\n・本モデルを政治的および宗教的活動に利用することを禁止します。\n・VRChatやそれに類似したサービスを除いて、インターネット上に本モデルをアップロードすることを禁止します。\n\n・VRChat内にて使用する場合、本モデルを使用したアバターをPublic設定でのアップロード、またVRChat内でアバターペデスタル等を使用した配布を禁止します。\n（Private設定での使用は可能です）\n\n◇本モデルは予告なく配布を停止、または使用を禁止する場合があります。\n\n◇この利用規約は予告なく変更される事があります。規約は最新のものが適用されます。","url":"https://booth.pm/ja/items/1006195","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/fa82e193-d955-433b-bbee-7ce669773ee2/i/1006195/01c5a68a-d7e9-4bdb-9c3f-9735c67a9268_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iqWHJQT+QxpbQC+gN6+sZV53tWTflwXDQueyq1sPyew="></script>
+    nonce="txEcrtOhE7i3g7HFViYYBMhNCPSfg3YyMIfYD6uSP8A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
