updated at: 2023-04-25 20:19, Short Sword（小型片手剣）【無料版あり】 - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/19/1005619.html
+++ b/VRChat/19/1005619.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rzjcuj8lJ7J+4d3cnFW7/ksg0AGx2Od7VX2CrQbez8U="></script>
+    "UGtOkAsBYA9jVHWXTxsSI4lsBO/kTRAlXLbkI5UJA70="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Short Sword（小型片手剣）【無料版あり】","description":"累計売上５桁を記念して制作したオーソドックスな小型の片手剣です。\nSketchfabで3Dモデルの閲覧ができます。\n\n今回は記念品ということで無料版もご用意しております。是非一度、お試しください\n無料版でも制限はありません。有料版同様の規約に則ってご利用いただけます。\n\n※通常版と投げ銭版の内容は(規約含めて)完全に同一です　間違えましても、返金には応じられませんので、ご注意ください。\n\nNew!：VCI版も公開しました　主にvキャスで使用可能です\nhttps://seedonline.jp/products/6b45e4b07301f0a738ccfcd5d1d0eb7855539a50f8bf7cb23d79ac75485c0e87 ","url":"https://booth.pm/ja/items/1005619","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1005619/ec1f118a-9c8c-4013-bb71-7613f9029fc3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rzjcuj8lJ7J+4d3cnFW7/ksg0AGx2Od7VX2CrQbez8U="></script>
+    nonce="UGtOkAsBYA9jVHWXTxsSI4lsBO/kTRAlXLbkI5UJA70="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1005619/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1005619/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
